# goalseek

./: .gitignore  AGENTS.md  LICENSE  README.md  kaggle_demo_step_by_step.md  loop_engine_phases.md  make-incremental-package.sh  make-package.sh  move-testpackage.sh  new-branch.sh  project-wiki.md  pyproject.toml  step_by_step_explaination.md  system_architecture.md
.github/workflows/: deploy-docs.yml
demo/: experiment.py  manifest.yaml  program.md  setup.py  validate_results.py
demo/config/: project.yaml
demo/context/: setup_prompt.md
docs/: readme-old.md
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: intro.mdx
docs-site/docs/architecture/: loop-engine-phases.mdx  system-architecture.mdx
docs-site/docs/getting-started/: quickstart.mdx
src/goalseek/: __init__.py  api.py  errors.py  runtime_logging.py
tasks/: agent-spec.md
test-package/: .gitignore
test-package/context/: data_dictionary.md  overview.md
test-package/hidden/: create_setup.md
tests/: conftest.py  helpers.py
tests/fixtures/: fake_provider_mixed.yaml  fake_provider_output.yaml  fake_provider_single_improve.yaml
tests/integration/: test_logging_flow.py  test_project_flow.py  test_project_init_cli.py
tests/unit/: test_claude_code_provider.py  test_claude_code_provider_edge.py  test_config_precedence.py  test_manifest_service.py  test_metrics.py  test_repo.py  test_runtime_logging.py  test_step_engine.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
(+69 files in other folders)
